# MindVault

./: .env.example  README.md  contributing.md  docker-compose.yml  pyproject.toml  todo.md
docs/: README.md  api.md  architecture.md  blob-storage.md  changelog.md  configuration.md  faq.md  index.md  installation.md  user-guide.md
playtwright-twitter-scraping-exp/: readme.md  scrape.py
src/mindvault/: __init__.py
src/mindvault/bookmarks/browser/: chromium.py
src/mindvault/bookmarks/twitter/: bookmarks.py  database.py  download_tweet_media.py  download_tweet_media_object_storage.py  download_tweet_media_rustfs.py  extract.py  media_download.py  pending.py  schema.py  scraper.py  workflow.py
src/mindvault/bookmarks/twitter/scraper/: __init__.py  base.py  cookie_scraper.py  playwright_scraper.py
src/mindvault/core/: config.py  logger_setup.py  mongodb_utils.py
src/scripts/: delete_non_media_dirs.py  download_pending_media.py  save_to_mongodb.py
tests/: test_blob_storage_config.py  test_blob_storage_store.py
