[project]
name = "mindvault"
version = "0.1.0"
description = "AI-powered personal knowledge assistant that transforms your digital footprint into an intelligent knowledge base."
readme = "README.md"
authors = [
    { name = "Vedmani", email = "vedmani.vaidya@gmail.com" },

]
requires-python = ">=3.12"
dependencies = [
    "httpx[http2]>=0.28.1",
    "jsonref>=1.1.0",
    "litellm>=1.65.4.post1",
    "loguru>=0.7.3",
    "pillow>=11.1.0",
    "playwright>=1.52.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "pymongo>=4.11.3",
    "sqlalchemy>=2.0.38",
    "tenacity>=9.0.0",
    "twitter-api-client>=0.10.22",
]

[project.scripts]
mindvault = "mindvault:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyterlab>=4.3.5",
]
